# GenAI-Products-Tools

./: .gitignore
AI Products/CSR Gen AI/: .gitignore  requirements.txt  test_section1.py
AI Products/CSR Gen AI/Guidelines-module/: guidlines.json  guidlines_processor.py  (+1 more)
AI Products/Loan Originating System/: User-stories.md
AI Products/TuneTrace.AI/: .gitignore  DATABASE_GUIDE.md  example.py  run_web.sh
Agents/TuneTrace.AI/: ARCHITECTURE.md  AUTO_ENV_SETUP.md  CHANGES_SUMMARY.md  FILES_CREATED.txt  FINAL_OAUTH_SETUP.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  Makefile  PROJECT_SUMMARY.md  Paramters-Similarity.xlsx  QUICKSTART.md  QUICK_REFERENCE.md  README.md  RUNNING.md  RUN_INSTRUCTIONS.txt  SETUP_COMPLETE.md  START_HERE.md  WEB_GUIDE.md  YOUTUBE_DOWNLOAD_FIX.md  YOUTUBE_PLAYLIST_FEATURE.md  YOUTUBE_SETUP_GUIDE.md  pyproject.toml  tunetrace_architecture.txt
Agents/TuneTrace.AI/app/: __init__.py  downloads.py  main.py
Agents/TuneTrace.AI/app/database/: __init__.py
Agents/TuneTrace.AI/deployment/: deploy.py  test_deployment.py
Agents/TuneTrace.AI/eval/: test_eval.py
Agents/TuneTrace.AI/frontend/: index.html  package-lock.json
Agents/TuneTrace.AI/frontend/src/: App.css  index.css  main.tsx
Agents/TuneTrace.AI/frontend/src/components/: AnalysisForm.css  AnalysisForm.tsx  DownloadProgress.css  DownloadProgress.tsx  Header.css  Header.tsx  ResultsDisplay.tsx
Agents/TuneTrace.AI/tune_trace_ai/: tools.py  url_finder.py
Loan Originating System/: PRD.md  start.sh
Loan Originating System/backend/: main.py  models.py  seed_data.py
(+167 files in other folders)
